      are using two co-chopped standards (or really anytime you have three
      distinct samples chopped together), set samples = 3. This can also be
      changed interactively in the browseFlowHist GUI.

    * The layout of the browseFlowHist GUI has been re-arranged somewhat to
      accomodate the new features mentioned above.

Changes in version 1.1.1 (2016-10-26)
-------------------------------------

Internal Changes:

    * Improved peak finding algorithm

    * Reduced region searched for the starting bin for model fitting. Was
      originally 20, now set to 10. Need more data to establish best
      approach.

Changes in version 0.99.3 (2016-10-17)
--------------------------------------

Internal Changes

    * Updated DESCRIPTION to include URL and BugReports fields, mostly as
      an exercise to test SVN access and syncing SVN <-> git

Changes in version 0.99.2 (2016-10-12)
--------------------------------------

Internal Changes

    * added a new slot to ModelComponents, `paramLimits`, which allows
      lower and upper limits to be set for each model parameter. (corrects
      bug where linearity wanders below 1, giving nonsense results).

    * rationalized the bounds of the data fit in the NLS procedure. Model
      fitting, and RCS calculation, are now all tied to the bin identified
      by fhStart. This selects the highest intensity (peak) in the first 20
      non-zero channels, and ignores all channels below this point. Prior
      to this, the number of observations and associated degrees of freedom
      was calculated in an ad-hoc manner, making the RCS values (even-more)
      difficult to interpret; in addition, the single- and multi- cut
      values started at one channel, but the RCS calculations started on
      another channel, which didn't make sense.

Changes in version 0.99.1 (2016-10-11)
--------------------------------------

User Visible Changes

    * Vignette updated to include installation instructions for